[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["Sommelier <Arty.03.07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-RESTful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
